client/css/irc.css
html, body {
  height: 100%; }

body {
  background-color: #ecf0f1;
  padding-top: 66px;
  -webkit-font-smoothing: antialiased;
  font-family: Helvetica, sans-serif; }

.tooltip {
  transform: translate(0px, 5px);
  transition: transform ease-in-out 0.15s; }

.tooltip.in {
  opacity: 0.8;
  transform: translate(0px, 25px); }

.tooltip-inner {
  background-color: #2c3e50; }

.tooltip.top .tooltip-arrow {
  border-top-color: #2c3e50; }

.fixed-width {
  font-family: Monaco, Menlo, Consolas, "Courier New", monospace; }

.reverse {
  -webkit-transform: scale(-1, 1); }

.underline {
  text-decoration: underline; }

code {
  color: #777777;
  font-size: 14px;
  border: 1px solid #e1e1e8;
  background-color: #f7f7f9; }

.btn-primary {
  background-color: #3498db; }

.rdio-button {
  color: #777777;
  border: 1px solid #b8c3c9;
  line-height: 26px;
  display: inline-block;
  padding: 0 10px;
  cursor: pointer;
  border-radius: 4px;
  background-clip: padding-box;
  box-shadow: 0px 1px 0 0px rgba(0, 0, 0, 0.07);
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
  -webkit-user-select: none;
  background-image: -webkit-linear-gradient(white 60%, #f5f7fa 100%); }

button:focus {
  outline: none; }

a {
  color: #3498db; }

.thumbnail {
  background-color: white; }

input.form-control::-webkit-input-placeholder {
  color: rgba(0, 0, 0, 0.3); }

input.form-control {
  border: 2px solid #bdc3c7;
  box-shadow: none;
  -webkit-appearance: none; }

input.form-control:hover {
  border-color: #95a5a6;
  -webkit-appearance: none; }

input.form-control:focus {
  border-color: #3498db;
  box-shadow: none;
  -webkit-appearance: none; }

label {
  color: #777777; }

label.checkbox {
  color: #777777;
  line-height: 16px;
  margin-bottom: 25px; }
  label.checkbox p {
    font-weight: normal; }

.modal-backdrop.in {
  opacity: 0.5;
  filter: alpha(opacity=50); }

.btn-primary-outline {
  color: #3498db;
  border: 1px solid #3498db;
  background-color: transparent;
  font-size: 10px;
  text-transform: uppercase;
  font-weight: 700;
  letter-spacing: 1px; }
  .btn-primary-outline .glyphicon-plus {
    font-size: 8px;
    top: -1px; }

.btn-primary-outline:hover {
  color: white;
  background-color: #3498db;
  border: 1px solid #3498db; }

#relay-nav {
  background-color: #ecf0f1;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.15);
  border-color: #bdc3c7;
  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1); }
  #relay-nav .search {
    float: left;
    position: relative;
    margin-left: 50px; }
    #relay-nav .search input {
      border-radius: 13px;
      height: 26px;
      margin: 20px 0;
      width: 230px;
      border: none;
      padding-left: 26px; }
    #relay-nav .search .batch-icon {
      position: absolute;
      top: 27px;
      left: 8px;
      color: #bdc3c7;
      font-size: 14px;
      text-shadow: none; }
  #relay-nav .navbar-brand {
    color: white; }
  #relay-nav .navbar-nav li.open {
    background: none; }
  #relay-nav .navbar-nav li.signup > a {
    display: inline-block;
    margin: 15px 15px;
    padding: 8px 18px;
    border-radius: 4px;
    border: 1px solid white; }
  #relay-nav .navbar-nav li.signup > a:hover {
    color: #3498db;
    background-color: white; }
  #relay-nav .navbar-nav > li > a:hover {
    color: #333333; }
    #relay-nav .navbar-nav > li > a:hover .caret {
      border-top-color: #333333;
      border-bottom-color: #333333; }
  #relay-nav .navbar-nav > li.open > a {
    background-color: #ecf0f1;
    color: #333333; }
  #relay-nav .navbar-nav > li > a {
    color: #777777;
    padding: 23px 15px;
    text-shadow: none; }
    #relay-nav .navbar-nav > li > a .caret {
      border-top-color: #777777;
      border-bottom-color: #777777; }
    #relay-nav .navbar-nav > li > a .line {
      display: inline-block;
      border-right: 1px solid #bdc3c7;
      height: 18px;
      margin: -3px 7px; }
  #relay-nav .navbar-btn {
    background-color: #3498db;
    color: white;
    border-color: #3498db; }
  #relay-nav .navbar-collapse {
    border-color: #bdc3c7; }
  #relay-nav .navbar-toggle {
    border-color: #ecf0f1;
    background-color: #ecf0f1; }
  #relay-nav .navbar-inverse-toggle, #relay-nav .navbar-toggle:hover {
    border-color: #bdc3c7;
    background-color: #bdc3c7; }

#relay-nav.home {
  background-color: #3498db;
  border: none;
  text-shadow: none;
  box-shadow: none; }
  #relay-nav.home .search {
    display: none; }
  #relay-nav.home .navbar-nav > li > a {
    color: white; }
  #relay-nav.home .navbar-collapse {
    border-color: #2980b9; }
  #relay-nav.home .navbar-toggle {
    border-color: #3498db;
    background-color: #3498db; }
  #relay-nav.home .navbar-inverse-toggle, #relay-nav.home .navbar-toggle:hover {
    border-color: #2980b9;
    background-color: #2980b9; }

.marketing-section-signup {
  background-color: #3498db;
  color: #798795;
  font-size: 16px;
  text-align: center;
  height: 100%; }
  .marketing-section-signup img {
    box-shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.35); }
  .marketing-section-signup .container {
    text-align: center; }
    .marketing-section-signup .container h1 {
      font-size: 64px;
      color: white;
      font-weight: bold; }
      @media only screen and (min-width: 1024px) {
        .marketing-section-signup .container h1 {
          font-size: 114px; } }
    .marketing-section-signup .container h4 {
      color: rgba(255, 255, 255, 0.6);
      font-size: 14px;
      margin-bottom: 100px; }
      @media only screen and (min-width: 1024px) {
        .marketing-section-signup .container h4 {
          font-size: 19px; } }
    .marketing-section-signup .container .irssi {
      margin-right: 75px; }
  @media only screen and (min-width: 768px) {
    .marketing-section-signup {
      text-align: left; } }
  @media only screen and (min-width: 1344px) {
    .marketing-section-signup {
      font-size: 21px; } }
  .marketing-section-signup h1 {
    color: white; }
/* ... */

